--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav">
             <li><a href="{{ site.baseurl }}/product">Features</a></li>
             <li><a href="{{ site.baseurl }}/company">Company</a></li>
-            <li><a href="#">Support</a></li>
+            <li><a href="{{ site.baseurl }}/support">Support</a></li>
             <!--
             <li><a href="#">Link</a></li>
             <li class="dropdown">
@@ -64,7 +64,7 @@
       <div class="container">
         <hr>
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-md-3">
             <h4>BuildYourOwnCurriculum</h4>
             <ul>
               <li><a href="{{ site.baseurl }}/product">Features</a></li>
@@ -76,7 +76,7 @@
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>-->
             </ul>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-2">
             <h4>Company</h4>
             <ul>
               <li><a href="{{ site.baseurl }}/company">About Us</a></li>
@@ -85,9 +85,10 @@
               <li><a href="{{ site.baseurl }}/events">Events</a></li>
             </ul>
           </div>
-          <div class="col-sm-4">
+          <div class="col-md-3">
             <h4>Support</h4>
             <ul>
+              <li><a href="{{ site.baseurl }}/support">Overview</a></li>
               <li><a href="#">Educational Resources</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
             </ul>
