Outlining purpose of each page.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,7 +72,6 @@
               <li><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
               <li><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
               <!--<li><a href="{{ site.baseurl }}/success-stories">Resources</a></li>
-              <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>-->
             </ul>
           </div>
@@ -89,7 +88,8 @@
             <h4>Support</h4>
             <ul>
               <li><a href="{{ site.baseurl }}/support">Overview</a></li>
-              <li><a href="#">Educational Resources</a></li>
+              <li><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
+              <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
             </ul>
           </div>
