Some site map tweaks.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,6 +70,7 @@
               <li><a href="{{ site.baseurl }}/product">Features</a></li>
               <li><a href="{{ site.baseurl }}/webinars">Attend a Webinar</a></li>
               <li><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
+              <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
               <li><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
               <!--<li><a href="{{ site.baseurl }}/success-stories">Resources</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>-->
@@ -80,6 +81,7 @@
             <ul>
               <li><a href="{{ site.baseurl }}/company">About Us</a></li>
               <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+              <li><a href="{{ site.baseurl }}/awards">Awards and Recognition</a></li>
               <li><a href="{{ site.baseurl }}/news">News</a></li>
               <li><a href="{{ site.baseurl }}/events">Events</a></li>
             </ul>
@@ -89,7 +91,6 @@
             <ul>
               <li><a href="{{ site.baseurl }}/support">Overview</a></li>
               <li><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
-              <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
             </ul>
           </div>
