--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,23 +32,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="{{ site.baseurl }}/product">Features</a></li>
+            <li><a href="{{ site.baseurl }}/product">Product Tour</a></li>
             <li><a href="{{ site.baseurl }}/company">Company</a></li>
             <li><a href="{{ site.baseurl }}/support">Support</a></li>
-            <!--
-            <li><a href="#">Link</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li> -->
           </ul>
           <div class="navbar-right">
             <a href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default navbar-btn">Attend a Webinar</a>
@@ -67,13 +53,13 @@
           <div class="col-md-3">
             <h4>BuildYourOwnCurriculum</h4>
             <ul>
-              <li><a href="{{ site.baseurl }}/product">Features</a></li>
-              <li><a href="{{ site.baseurl }}/webinars">Attend a Webinar</a></li>
+              <li><a href="{{ site.baseurl }}/product">Product Tour</a></li>
+              <li><a href="{{ site.baseurl }}/editions">Editions</a></li>
+              <li><a href="{{ site.baseurl }}/story">Story and Core Beliefs</a></li>
+              <li><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
               <li><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
               <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
-              <li><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
-              <!--<li><a href="{{ site.baseurl }}/success-stories">Resources</a></li>
-              <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>-->
+              <li><a href="{{ site.baseurl }}/awards">Awards and Recognition</a></li>
             </ul>
           </div>
           <div class="col-md-2">
@@ -81,7 +67,7 @@
             <ul>
               <li><a href="{{ site.baseurl }}/company">About Us</a></li>
               <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-              <li><a href="{{ site.baseurl }}/awards">Awards and Recognition</a></li>
+              <li><a href="{{ site.baseurl }}/regional-partners">Regional Partners</a></li>
               <li><a href="{{ site.baseurl }}/news">News</a></li>
               <li><a href="{{ site.baseurl }}/events">Events</a></li>
             </ul>
@@ -93,6 +79,9 @@
               <li><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
             </ul>
+          </div>
+          <div class="col-md-4">
+            <a style="width: 100%" href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default navbar-btn">Attend a Webinar</a>
           </div>
         </div>
       </div>
