Defining type styles.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,93 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% if page.title %}{{ page.title }} |{% endif %} BuildYourOwnCurriculum</title>
-  
-    <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet">
-    
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}/">BuildYourOwnCurriculum</a>
-        </div>
-
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li><a href="{{ site.baseurl }}/product">Product Tour</a></li>
-            <li><a href="{{ site.baseurl }}/company">Company</a></li>
-            <li><a href="{{ site.baseurl }}/support">Support</a></li>
-          </ul>
-          <div class="navbar-right">
-            <a href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default navbar-btn">Attend a Webinar</a>
-            <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn btn-default navbar-btn">Sign In</a>
-          </div>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
-    </nav>
+{% include header.html %}
     
     {{ content }}
     
-    <footer>
-      <div class="container">
-        <hr>
-        <div class="row">
-          <div class="col-md-3">
-            <h4>BuildYourOwnCurriculum</h4>
-            <ul>
-              <li><a href="{{ site.baseurl }}/product">Product Tour</a></li>
-              <li><a href="{{ site.baseurl }}/editions">Editions</a></li>
-              <li><a href="{{ site.baseurl }}/story">Story and Core Beliefs</a></li>
-              <li><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
-              <li><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
-              <li><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
-              <li><a href="{{ site.baseurl }}/awards">Awards and Recognition</a></li>
-            </ul>
-          </div>
-          <div class="col-md-2">
-            <h4>Company</h4>
-            <ul>
-              <li><a href="{{ site.baseurl }}/company">About Us</a></li>
-              <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-              <li><a href="{{ site.baseurl }}/regional-partners">Regional Partners</a></li>
-              <li><a href="{{ site.baseurl }}/news">News</a></li>
-              <li><a href="{{ site.baseurl }}/events">Events</a></li>
-            </ul>
-          </div>
-          <div class="col-md-3">
-            <h4>Support</h4>
-            <ul>
-              <li><a href="{{ site.baseurl }}/support">Overview</a></li>
-              <li><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
-              <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <a style="width: 100%" href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default navbar-btn">Attend a Webinar</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{{ site.baseurl}}/js/bootstrap.min.js"></script>
-  </body>
-</html>
+{% include footer.html %}
