--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,116 @@
+/*
+ * Typography
+ */
+
+html {
+  font-size: 16px;
+}
+@media (min-width: 768px) {
+  html {
+    font-size: 20px;
+  }
+}
+body {
+  font-size: 1rem;
+  line-height: 1.35rem;
+}
+.main-content {
+  margin-top: 30px;
+  max-width: 675px;
+}
+p {
+  margin-top: 0px;
+  margin-bottom: 1rem;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 1.5rem;
+  margin-bottom: .5rem;
+}
+h1 {
+  margin-top: 0px;
+  font-size: 1.2rem;
+}
+h2 {
+  font-size: 1.1rem;
+}
+ul {
+  padding-left: 20px;
+}
+ol {
+  padding-left: 30px;
+}
+ul li,
+ol li {
+  margin-top: 0px;
+  margin-bottom: .75rem;
+}
+blockquote {
+  border-left: none;
+  font-size: .9rem;
+  line-height: 1.35;
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
+/*
+ * Buttons
+ */
+
+.btn {
+  font-size: 14px;
+}
+@media (min-width: 768px) {
+  .btn {
+    font-size: 16px;
+  }
+}
+
+/*
+ * Navigation bar
+ */
+
+.navbar {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 0px;
+}
+.nav > li {
+  margin-bottom: 0px;
+}
+.navbar-brand {
+  font-size: 18px;
+}
+@media (min-width: 768px) {
+  .navbar-brand {
+    font-size: 20px;
+  }
+}
+
+/*
+ * Jumbotron
+ */
+
+.jumbotron h1 {
+  font-size: 2rem;
+}
+
+/*
+ * Footer
+ */
+
 footer ul {
   list-style: none;
   padding-left: 0;
+  font-size: 16px;
 }
-.lead {
-  max-width: 920px;
+footer h2 {
+  margin-top: 0px;
+}
+footer ul li {
+  margin-bottom: 0px;
 }
