Add some initial copy, iterate page layouts, font family.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,6 +40,7 @@
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="{{ site.baseurl}}/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/js/holder.js"></script>
   </body>
 </html>
