--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,9 @@
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet">
     
+    <script type="text/javascript" src="//use.typekit.net/mwx6uka.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -17,7 +20,6 @@
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -41,5 +43,4 @@
             <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn btn-default navbar-btn">Sign In</a>
           </div>
         </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
     </nav>
