--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
-<div class="container">
-  <div class="main-content">
-  {{ content }}
+<div class="container main-content">
+  <div class="row">
+    <div class="col-md-7 center-block">
+      {{ content }}
+    </div>
   </div>
 </div>
