--- a/css/main.css
+++ b/css/main.css
@@ -14,10 +14,30 @@ body {
   font-size: 1em;
   line-height: 1.35;
   margin-bottom: 40px;
+  font-family: "sirba-web", Georgia, serif;
+  color: #333;
+}
+img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+/* Helper class to center a set of columns horizontally */
+.center-block {
+  float: none;
+}
+/* Helper class to center things vertically */
+.vertical-center {
+  position: relative;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  	  -ms-transform: translateY(-50%);
+  	      transform: translateY(-50%);
 }
 .main-content {
   margin-top: 30px;
-  max-width: 675px;
+  min-height: 300px;
 }
 
 /*
@@ -39,10 +59,10 @@ h6 {
 }
 h1 {
   margin-top: 0px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 h2 {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 ul {
   padding-left: 20px;
@@ -69,6 +89,7 @@ blockquote {
 
 .btn {
   font-size: 14px;
+  font-family: Helvetica, sans-serif;
 }
 @media (min-width: 768px) {
   .btn {
@@ -84,6 +105,7 @@ blockquote {
   padding-top: 5px;
   padding-bottom: 5px;
   margin-bottom: 0px;
+  font-family: Helvetica, sans-serif;
 }
 .nav > li {
   margin-bottom: 0px;
@@ -104,6 +126,9 @@ blockquote {
 
 .jumbotron {
   height: 400px;
+  padding-left: 0px;
+  padding-right: 0px;
+  padding-top: 60px;
 }
 .jumbotron h1 {
   font-size: 2rem;
@@ -115,9 +140,20 @@ blockquote {
 }
 
 /*
+ * Call to action
+ */
+
+.call-to-action {
+  margin-bottom: 20px;
+}
+
+/*
  * Footer
  */
 
+footer {
+  font-family: Helvetica, sans-serif;
+}
 footer ul {
   list-style: none;
   padding-left: 0;
