--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,7 @@
   </head>
   <body>
     <nav class="navbar navbar-default" role="navigation">
+      <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -43,4 +44,5 @@
             <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn btn-default navbar-btn">Sign In</a>
           </div>
         </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
     </nav>
