Typography refinement, color, layout.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <a style="width: 100%" href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default">Attend a Webinar</a>
+            <a style="width: 100%" href="{{ site.baseurl }}/webinars" type="button" class="btn btn-primary">Attend a Webinar</a>
           </div>
         </div>
       </div>
