--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar navbar-default" role="navigation">
+    <nav class="navbar" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}/">BuildYourOwnCurriculum</a>
+          <a class="navbar-brand" href="{{ site.baseurl }}/"><!--<img class="logo" src="{{ site.baseurl }}/img/buildyourowncurriculum-logo.jpg">-->BuildYourOwnCurriculum</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -40,8 +40,8 @@
             <li><a href="{{ site.baseurl }}/support">Support</a></li>
           </ul>
           <div class="navbar-right">
-            <a href="{{ site.baseurl }}/webinars" type="button" class="btn btn-default navbar-btn">Attend a Webinar</a>
-            <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn btn-default navbar-btn">Sign In</a>
+            <a href="{{ site.baseurl }}/webinars" type="button" class="btn navbar-btn btn-primary">Attend a Webinar</a>
+            <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn navbar-btn btn-primary">Sign In</a>
           </div>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
