Style changes, rough draft of sub navigation.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,13 +29,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}/"><!--<img class="logo" src="{{ site.baseurl }}/img/buildyourowncurriculum-logo.jpg">-->BuildYourOwnCurriculum</a>
+          <a class="navbar-brand" href="{{ site.baseurl }}/"><img class="logo" src="{{ site.baseurl }}/img/buildyourowncurriculum-logo.jpg"></a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
+        <!-- Collect the nav links, forms, and other content for toggling-->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="{{ site.baseurl }}/product">Product Tour</a></li>
+            <li class="{% if page.slug =="product" %}active{% endif %}"><a href="{{ site.baseurl }}/product">Product Tour</a></li>
             <li><a href="{{ site.baseurl }}/company">Company</a></li>
             <li><a href="{{ site.baseurl }}/support">Support</a></li>
           </ul>
