--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+{% if page.slug == "product" %}{% include product-nav.html %}{% endif %}
+{% if page.slug == "company" %}{% include company-nav.html %}{% endif %}
 <div class="container main-content">
   <div class="row">
     <div class="col-md-7 center-block">
