--- a/css/main.css
+++ b/css/main.css
@@ -19,10 +19,10 @@ html {
 }
 body {
   font-size: 1em;
-  line-height: 1.4;
-  margin-bottom: 40px;
+  line-height: 1.45;
+  color: #2D2D2D;
   font-family: "sirba-web", Georgia, serif;
-  color: #333;
+  background-color: #E7E7E7;
 }
 img {
   max-width: 100%;
@@ -43,9 +43,10 @@ img {
   	      transform: translateY(-50%);
 }
 .main-content {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   min-height: 300px;
+  background-color: #FFF;
 }
 
 /*
@@ -64,14 +65,15 @@ h5,
 h6 {
   margin-top: 1.5rem;
   margin-bottom: .5rem;
+  font-size: 1rem;
   line-height: 1.35;
 }
 h1 {
   margin-top: 0px;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 h2 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 ul {
   padding-left: 20px;
@@ -108,7 +110,7 @@ hr {
 .btn {
   font-size: 14px;
   font-family: Helvetica, sans-serif;
-  border-radius: 3px;
+  border-radius: 7px;
 }
 @media (min-width: 768px) {
   .btn {
@@ -131,7 +133,7 @@ hr {
 .navbar {
   margin-bottom: 0px;
   background-color: #FFF;
-  border-bottom: 2px solid #E7E7E7;
+  border-bottom: 0px;
   font-family: Helvetica, sans-serif;
 }
 .nav > li {
@@ -139,17 +141,17 @@ hr {
   font-size: 17px;
   height: 100%;
 }
-/*.navbar-brand {
+.navbar-brand {
   height: auto;
 }
 .navbar-brand .logo {
-  max-width: 250px;
+  max-width: 213px;
   margin-top: 5px;
   margin-bottom: 5px;
 }
 @media (min-width: 980px) {
   .navbar-collapse {
-    margin-top: 25px;
+    margin-top: 20px;
   } 
 }
 .navbar-toggle {
@@ -158,7 +160,24 @@ hr {
 }
 .navbar-toggle .icon-bar {
   background-color: #0093C9;
-}*/
+}
+
+/*
+ * Sub-navigation bar
+ */
+
+.sub-nav {
+  background-color: #0093C9;
+}
+.sub-nav .nav li {
+  opacity: 1;
+}
+.sub-nav .nav li a {
+  color: #FFF;
+}
+.sub-nav .navbar-collapse {
+  margin-top: 0px;
+}
 
 /*
  * Jumbotron
@@ -172,6 +191,7 @@ hr {
   text-align: center;
   background-color: #0093c9;
   color: white;
+  letter-spacing: .02rem;
 }
 .jumbotron h1 {
   font-size: 1.95rem;
@@ -197,6 +217,10 @@ hr {
 
 footer {
   font-family: Helvetica, sans-serif;
+  background-color: #0093C9;
+  color: #FFF;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 footer ul {
   list-style: none;
@@ -210,4 +234,7 @@ footer h2 {
 }
 footer ul li {
   margin-bottom: 0px;
+}
+footer ul li a {
+  color: #FFF;
 }
