Clean up subnav styles.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
     <![endif]-->
   </head>
   <body>
-    <nav class="navbar" role="navigation">
+    <nav class="navbar main-nav" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
