--- a/_includes/support-nav.html
+++ b/_includes/support-nav.html
@@ -13,11 +13,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
-        <li {% if page.url == "/company/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/company">About Us</a></li>
-        <li {% if page.url == "/contact/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/contact">Contact</a></li>
-        <li {% if page.url == "/regional-partners/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/regional-partners">Regional Partners</a></li>
-        <li {% if page.url == "/news/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/news">News</a></li>
-        <li {% if page.url == "/events/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/events">Events</a></li>
+        <li {% if page.url == "/support/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/support">Overview</a></li>
+        <li {% if page.url == "/educational-resources/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
+        <li {% if page.url == "/faq/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/faq">FAQ</a></li>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav>
