--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,7 @@ layout: default
 ---
 {% if page.slug == "product" %}{% include product-nav.html %}{% endif %}
 {% if page.slug == "company" %}{% include company-nav.html %}{% endif %}
+{% if page.slug == "support" %}{% include support-nav.html %}{% endif %}
 <div class="container main-content">
   <div class="row">
     <div class="col-md-7 center-block">
