--- a/_includes/company-nav.html
+++ b/_includes/company-nav.html
@@ -1,23 +1,11 @@
-<nav class="navbar sub-nav" role="navigation">
+<nav id="company-nav" class="navbar sub-nav" role="navigation">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li {% if page.url == "/company/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/company">About Us</a></li>
-        <li {% if page.url == "/contact/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/contact">Contact</a></li>
-        <li {% if page.url == "/regional-partners/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/regional-partners">Regional Partners</a></li>
-        <li {% if page.url == "/news/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/news">News</a></li>
-        <li {% if page.url == "/events/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/events">Events</a></li>
-    </div><!-- /.navbar-collapse -->
+    <ul class="nav navbar-nav">
+      <li {% if page.url == "/company/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/company">About Us</a></li>
+      <li {% if page.url == "/contact/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/contact">Contact</a></li>
+      <li {% if page.url == "/regional-partners/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/regional-partners">Regional Partners</a></li>
+      <li {% if page.url == "/news/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/news">News</a></li>
+      <li {% if page.url == "/events/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/events">Events</a></li>
+    </ul>
   </div><!-- /.container -->
 </nav>
