--- a/_includes/product-nav.html
+++ b/_includes/product-nav.html
@@ -1,25 +1,13 @@
-<nav class="navbar sub-nav" role="navigation">
+<nav id="product-nav" class="navbar sub-nav" role="navigation">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li {% if page.url == "/product/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/product">Features</a></li>
-        <li {% if page.url == "/editions/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/editions">Editions</a></li>
-        <li {% if page.url == "/story/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/story">Story and Core Beliefs</a></li>
-        <li {% if page.url == "/video-demos/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
-        <li {% if page.url == "/success-stories/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
-        <li {% if page.url == "/sample-curriculum/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
-        <li {% if page.url == "/awards/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/awards">Awards</a></li>
-    </div><!-- /.navbar-collapse -->
+    <ul class="nav navbar-nav">
+      <li {% if page.url == "/product/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/product">Features</a></li>
+      <li {% if page.url == "/editions/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/editions">Editions</a></li>
+      <li {% if page.url == "/story/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/story">Story and Core Beliefs</a></li>
+      <li {% if page.url == "/video-demos/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/video-demos">Video Demos</a></li>
+      <li {% if page.url == "/success-stories/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/success-stories">Success Stories</a></li>
+      <li {% if page.url == "/sample-curriculum/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/sample-curriculum">Sample Curriculum</a></li>
+      <li {% if page.url == "/awards/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/awards">Awards</a></li>
+    </ul>
   </div><!-- /.container -->
 </nav>
