--- a/_includes/support-nav.html
+++ b/_includes/support-nav.html
@@ -1,21 +1,9 @@
-<nav class="navbar sub-nav" role="navigation">
+<nav id="support-nav" class="navbar sub-nav" role="navigation">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li {% if page.url == "/support/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/support">Overview</a></li>
-        <li {% if page.url == "/educational-resources/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
-        <li {% if page.url == "/faq/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/faq">FAQ</a></li>
-    </div><!-- /.navbar-collapse -->
+    <ul class="nav navbar-nav">
+      <li {% if page.url == "/support/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/support">Overview</a></li>
+      <li {% if page.url == "/educational-resources/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/educational-resources">Educational Resources</a></li>
+      <li {% if page.url == "/faq/" %}class="active"{% endif %}><a href="{{ site.baseurl }}/faq">FAQ</a></li>
+    </ul>
   </div><!-- /.container -->
 </nav>
