--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ h6 {
   margin-bottom: .5rem;
   font-size: 1rem;
   line-height: 1.35;
+  font-weight: bold;
 }
 h1 {
   margin-top: 0px;
@@ -174,7 +175,8 @@ hr {
 .sub-nav {
   background-color: #0093C9;
   border-radius: 0px;
-  font-size: 14px;
+  font-size: 15px;
+  min-height: 0px;
 }
 .sub-nav .nav li {
   opacity: 1;
@@ -191,13 +193,29 @@ hr {
   background-color: transparent;
   opacity: 1;
 }
-.sub-nav .navbar-collapse {
+.sub-nav .navbar-nav {
   margin-top: 0px;
+  margin-bottom: 0px;
 }
-@media (min-width: 768px) {
-  .sub-nav .navbar-collapse {
-    margin-left: 213px;
+@media (min-width: 1200px) {
+  .sub-nav .navbar-nav {
+    margin-left: 228px;
   }
+}
+.sub-nav .navbar-nav li {
+  display: inline-block;
+}
+.sub-nav .navbar-toggle {
+  border: 1px solid #FFF;
+}
+.sub-nav .navbar-toggle .icon-bar {
+  background-color: #FFF;
+}
+#company-nav {
+  background-color: #40A97E;
+}
+#support-nav {
+  background-color: #F3A063;
 }
 
 /*
@@ -217,6 +235,7 @@ hr {
 }
 .jumbotron h1 {
   font-size: 1.95rem;
+  font-weight: normal;
   line-height: 1.2;
 }
 .jumbotron p {
@@ -224,13 +243,6 @@ hr {
   line-height: 1.35;
   margin-top: 15px;
   margin-bottom: 25px;
-}
-
-/*
- * Call to action
- */
-
-.call-to-action {
 }
 
 /*
