Add call to action component.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,9 @@
 {% include header.html %}
     
     {{ content }}
-    
+
+{% if page.calltoaction %}
+  {% include call-to-action.html %}
+{% endif %}
+
 {% include footer.html %}
