Adding some calls to action, editing footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,17 @@
               <li><a href="{{ site.baseurl }}/faq">FAQ</a></li>
             </ul>
           </div>
+          <div class="col-md-3">
+            <h2>School Software Group</h2>
+            <p>61 N. Meadow Row Ct.<br>
+            Appleton, WI 54913<br>
+            Phone: 920.264.9040<br>
+            Toll Free: 800.596.0735</p>
+            <ul>
+              <li><a href="http://www.facebook.com/SchoolSoftwareGroup">Visit us on Facebook</a></li>
+              <li><a href="https://twitter.com/SchoolSoftware">Follow us on Twitter</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
