--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,7 +41,7 @@
           </ul>
           <div class="navbar-right">
             <a href="{{ site.baseurl }}/webinars" type="button" class="btn navbar-btn btn-primary">Attend a Webinar</a>
-            <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn navbar-btn btn-primary">Sign In</a>
+            <a href="http://admin.buildyourowncurriculum.com" type="button" class="btn navbar-btn btn-primary">Login</a>
           </div>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
