--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
     
     {{ content }}
 
-{% if page.calltoaction %}
+{% if page.call-to-action != "no" %}
   {% include call-to-action.html %}
 {% endif %}
 
