--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,6 +1,6 @@
 <div class="call-to-action">
   <div class="container">
-    <h2>Call to Action</h2>
+    <h2>See a Live Demonstration!</h2>
     <a class="btn btn-lg btn-inverse" href="{{ site.baseurl }}/webinars">Attend a Webinar</a>
   </div>
 </div>
