Adding intro graphic.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <bodys>
     <nav class="navbar main-nav" role="navigation">
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
