--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,7 @@ h6 {
   font-size: 1rem;
   line-height: 1.35;
   font-weight: bold;
+  color: #0093C9;
 }
 h1 {
   margin-top: 0px;
@@ -220,7 +221,7 @@ hr {
   border-radius: 0px;
   font-size: 15px;
   min-height: 0px;
-  border-bottom: 5px solid rgba(255,255,255,.6);
+  border-bottom: 7px solid rgba(255,255,255,.6);
 }
 .sub-nav .nav li {
   opacity: 1;
@@ -266,16 +267,34 @@ hr {
 
 .jumbotron {
   position: relative;
-  height: 400px;
   margin-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
   text-align: center;
-  background-color: #0093c9;
   color: white;
   letter-spacing: .02rem;
-  border-top: 5px solid rgba(255,255,255,.6);
-  border-bottom: 5px solid rgba(255,255,255,.6);
+  border-top: 7px solid rgba(0,147,201,.6);
+  border-bottom: 7px solid rgba(0,147,201,.6);
+  background: #E7E7E7 url(/img/intro-collage.jpg) no-repeat fixed;
+  height: 450px;
+}
+@media (min-width: 768px) {
+  .jumbotron {
+    -webkit-background-size: cover;
+       -moz-background-size: cover;
+         -o-background-size: cover;
+            background-size: cover;
+  }
+}
+@media (min-width: 1400px) {
+  .jumbotron {
+    height: 525px;
+  }
+}
+@media (min-width: 1500px) {
+  .jumbotron {
+    height: 560px;
+  }
 }
 .jumbotron-caption {
   visibility: hidden;
@@ -284,6 +303,13 @@ hr {
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  -webkit-filter: drop-shadow(0px 0px 5px rgba(0,0,0,.3));
+	-moz-filter: drop-shadow(0px 0px 5px rgba(0,0,0,.3));
+	-ms-filter: drop-shadow(0px 0px 5px rgba(0,0,0,.3));
+	-o-filter: drop-shadow(0px 0px 5px rgba(0,0,0,.3));
+	filter: drop-shadow(0px 0px 5px rgba(0,0,0,.3));
 }
 .jumbotron h1 {
   font-size: 1.95rem;
@@ -320,6 +346,13 @@ hr {
   padding-bottom: 40px;
   border-top: 5px solid rgba(255,255,255,.5);
 }
+.call-to-action h1,
+.call-to-action h2 {
+  color: #FFF;
+  letter-spacing: .02rem;
+}
+
+
 
 /*
  * Footer
